Minor update to ordering of ToC

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -30,10 +30,10 @@
     "* [ ] [Meta-data: read & write](#Meta-data:-reading-&-writing)\n",
     "* [ ] [Practice & learn](#Practice-&-learn)\n",
     "  * [ ] Coding, algorithms & data structures\n",
+    "  * [ ] Interview questions, STAR storytelling\n",
     "  * [ ] Data science: access, manipulation, analysis, visualization\n",
     "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP\n",
-    "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
-    "  * [ ] Interview questions, STAR storytelling"
+    "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch"
    ]
   },
   {
