Another minor update of daily practice template

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -30,10 +30,11 @@
     "* [ ] [Meta-data: read & write](#Meta-data:-reading-&-writing)\n",
     "* [ ] [Practice & learn](#Practice-&-learn)\n",
     "  * [ ] Coding, algorithms & data structures\n",
-    "  * [ ] Interview questions, STAR storytelling\n",
+    "  * [ ] Brain teasers\n",
+    "  * [ ] Interviewing, STAR storytelling\n",
     "  * [ ] Data science: access, manipulation, analysis, visualization\n",
-    "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP\n",
-    "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch"
+    "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
+    "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP"
    ]
   },
   {
@@ -121,6 +122,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Brain teasers"
+   ]
   },
   {
    "cell_type": "markdown",
