Minor update to daily practice template - simplification and consolidation

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -29,12 +29,9 @@
     "  * [ ] Social media\n",
     "* [ ] [Meta-data: read & write](#Meta-data:-reading-&-writing)\n",
     "* [ ] [Practice & learn](#Practice-&-learn)\n",
-    "  * [ ] Coding, algorithms & data structures\n",
-    "  * [ ] Brain teasers\n",
-    "  * [ ] Interviewing, STAR storytelling\n",
-    "  * [ ] Data science: access, manipulation, analysis, visualization\n",
-    "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
-    "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP"
+    "  * [ ] Data science and machine learning\n",
+    "  * [ ] Algorithms, data structures, and brain teasers\n",
+    "  * [ ] Interviewing, STAR storytelling"
    ]
   },
   {
@@ -113,8 +110,13 @@
    "source": [
     "---\n",
     "\n",
-    "### Coding, algorithms & data structures"
+    "### Data science and machine learning"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -129,17 +131,13 @@
    "source": [
     "---\n",
     "\n",
-    "### Brain teasers"
+    "### Algorithms, data structures, and brain teasers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "### Interview questions"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -154,8 +152,13 @@
    "source": [
     "---\n",
     "\n",
-    "### Data science"
+    "### Interviewing and STAR storytelling"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -165,15 +168,6 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "### Engineering"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -181,34 +175,10 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "### Machine learning"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   },
   {
