Worked on the yoga pose recognition cv model and initial thoughts on good quality image data

--- a/ds/practice/daily_practice/20-08/20-08-14-227-fri.ipynb
+++ b/ds/practice/daily_practice/20-08/20-08-14-227-fri.ipynb
@@ -44,7 +44,15 @@
     "### Weekly\n",
     "\n",
     "Vim command(s) I'll get familiar with this week:\n",
-    "\n"
+    "\n",
+    "* `:s/find/replace/flags`\n",
+    "* `:%s` - entire file\n",
+    "  * `:%s/find/replace/g`\n",
+    "  * `:%s/find/replace/gc` (confirm before replacing)\n",
+    "* `:s` - current line only\n",
+    "  * `:s/find/replace/gc`\n",
+    "* Specific range of lines\n",
+    "  * `:36,42s/find/replace/g`"
    ]
   },
   {
