Small modification to weekly verbage

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "### Weekly\n",
     "\n",
-    "Vim command(s) I'll get familiar with this week:\n",
+    "Vim command(s) to practice this week:\n",
     "\n"
    ]
   },
