Grokking deep learning, chapter 3-4

--- a/ds/kb/books/grokking_deep_learning.ipynb
+++ b/ds/kb/books/grokking_deep_learning.ipynb
@@ -18,7 +18,7 @@
     "---\n",
     "---\n",
     "\n",
-    "## Chapter 1\n",
+    "## Chapter 2: Fundamental Concepts\n",
     "\n",
     "* What are deep learning, machine learning, and artificial intelligence?\n",
     "* What are parametric models and nonparametric models?\n",
@@ -137,7 +137,7 @@
     "---\n",
     "---\n",
     "\n",
-    "## Chapter 2\n",
+    "## Chapter 3: Forward Propogation\n",
     "\n",
     "* A simple network making a prediction\n",
     "* What is a neural network and what does it do?\n",
@@ -381,25 +381,244 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "What does it mean when a neural network makes a prediction?\n",
+    "\n",
+    "> The network gives a high score of the inputs based on how similar they are to the weights."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9800000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === Multiple inputs using numpy === #\n",
+    "import numpy as np\n",
+    "\n",
+    "weights = np.array([0.1, 0.2, 0])\n",
+    "def neural_network(input, weights):\n",
+    "    pred = input.dot(weights)\n",
+    "    return pred\n",
+    "\n",
+    "toes = np.array([8.5, 9.5, 9.9, 9.0])\n",
+    "wlrec = np.array([0.65, 0.8, 0.8, 0.9])\n",
+    "nfans = np.array([1.2, 1.3, 0.5, 1.0])\n",
+    "\n",
+    "input = np.array([toes[0], wlrec[0], nfans[0]])\n",
+    "pred = neural_network(input, weights)\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Making a prediction with multiple outputs\n",
+    "\n",
+    "I.e. 3 disconnected single-weight networks."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.195, 0.13, 0.5850000000000001]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ele_mul(number,vector):\n",
+    "    output = [0] * len(vector)\n",
+    "    assert(len(output) == len(vector))\n",
+    "    for i in range(len(vector)):\n",
+    "        output[i] = number * vector[i]\n",
+    "    return output\n",
+    "\n",
+    "def neural_network(input, weights):\n",
+    "    pred = ele_mul(input, weights)\n",
+    "    return pred\n",
+    "\n",
+    "weights = [0.3, 0.2, 0.9]\n",
+    "\n",
+    "wlrec = [0.65, 0.8, 0.8, 0.9]\n",
+    "input = wlrec[0]\n",
+    "pred = neural_network(input, weights)\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Multiple inputs and multiple outputs\n",
+    "\n",
+    "Three independent weighted sums of the input -> three predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.555, 0.9800000000000001, 0.9650000000000001]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def w_sum(a, b):\n",
+    "    assert len(a) == len(b)\n",
+    "    output = 0\n",
+    "    for i in range(len(a)):\n",
+    "        output += (a[i] * b[i])\n",
+    "    return output\n",
+    "\n",
+    "def vect_mat_mul(vect, matrix):\n",
+    "    assert len(vect) == len(matrix)\n",
+    "    output = [0] * len(vect)\n",
+    "    for i in range(len(vect)):\n",
+    "        output[i] = w_sum(vect, matrix[i])\n",
+    "    return output\n",
+    "\n",
+    "def neural_network(input, weights):\n",
+    "    pred = vect_mat_mul(input, weights)\n",
+    "    return pred\n",
+    "\n",
+    "weights = [\n",
+    "    [0.1, 0.1, -0.3], # hurt?\n",
+    "    [0.1, 0.2, 0.0],  # win?\n",
+    "    [0.0, 1.3, 0.1],  # sad?\n",
+    "]\n",
+    "\n",
+    "toes = [8.5, 9.5, 9.9, 9.0]\n",
+    "wlrec = [0.65, 0.8, 0.8, 0.9]\n",
+    "nfans = [1.2, 1.3, 0.5, 1.0]\n",
+    "\n",
+    "input = [toes[0], wlrec[0], nfans[0]]\n",
+    "pred = neural_network(input, weights)\n",
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predictions on predictions\n",
+    "\n",
+    "Take the output of one network and use it as input to another."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.21350000000000002, 0.14500000000000002, 0.5065]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ih_wgt = [\n",
+    "    [0.1, 0.2, -0.1], # hid[0]\n",
+    "    [-0.1,0.1, 0.9],  # hid[1]\n",
+    "    [0.1, 0.4, 0.1],  # hid[2]\n",
+    "]\n",
+    "\n",
+    "hp_wgt = [\n",
+    "    [0.3, 1.1, -0.3], # hurt?\n",
+    "    [0.1, 0.2, 0.0],  # win?\n",
+    "    [0.0, 1.3, 0.1],  # sad?\n",
+    "]\n",
+    "\n",
+    "weights = [ih_wgt, hp_wgt]\n",
+    "\n",
+    "def neural_network(input, weights):\n",
+    "    hid = vect_mat_mul(input, weights[0])\n",
+    "    pred = vect_mat_mul(hid, weights[1])\n",
+    "    return pred\n",
+    "\n",
+    "neural_network(input, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.496,  1.256, -0.286])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# === numpy version === #\n",
+    "import numpy as np\n",
+    "\n",
+    "ih_wgt = np.array([\n",
+    "    [0.1, 0.2, -0.1], # hid[0]\n",
+    "    [-0.1,0.1, 0.9],  # hid[1]\n",
+    "    [0.1, 0.4, 0.1],  # hid[2]\n",
+    "])\n",
+    "\n",
+    "hp_wgt = np.array([\n",
+    "    [0.3, 1.1, -0.3], # hurt?\n",
+    "    [0.1, 0.2, 0.0],  # win?\n",
+    "    [0.0, 1.3, 0.1],  # sad?\n",
+    "])\n",
+    "\n",
+    "weights = [ih_wgt, hp_wgt]\n",
+    "\n",
+    "input = np.array([toes[0], wlrec[0], nfans[0]])\n",
+    "\n",
+    "def neural_network(input, weights):\n",
+    "    hid = input.dot(weights[0])\n",
+    "    pred = hid.dot(weights[1])\n",
+    "    return pred\n",
+    "\n",
+    "neural_network(input, weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For dot product: put the (rows, columns) shapes next to each other - the inner ones should match."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -407,13 +626,144 @@
    "source": [
     "---\n",
     "\n",
-    "### Chapter 2: Review and solifidy\n",
+    "### Chapter 3: Review and solifidy\n",
     "\n",
     "> Record myself explaining (ELI5) the following topics\n",
     "\n",
     "* [ ] What is a neural network and what does it do?\n",
-    "* [ ] What is the intuition behind the dot product of two vectors?"
+    "* [ ] What is the intuition behind the dot product of two vectors?\n",
+    "* [ ] What dimensions have to match when taking the dot product?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "\n",
+    "## Chapter 4: Gradient Descent\n",
+    "\n",
+    "* Do neural networks make accurate predictions?\n",
+    "* Why measure error?\n",
+    "* Hot and cold learning\n",
+    "* Calculating both direction and amount from error\n",
+    "* Gradient descent\n",
+    "* Learning is just reducing error\n",
+    "* Derivatives and how to use them to learn\n",
+    "* Divergence and alpha\n",
+    "\n",
+    "> Or, the \"compare\" and \"learn\" part of the \"predict, compare, and learn\" process.\n",
+    "\n",
+    "Compare provides a measurement of how far off a prediction was, while learning tells each weight how it can change to reduce the error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare\n",
+    "\n",
+    "Does your network make good predictions?\n",
+    "\n",
+    "* Measuring error simplifies the problem\n",
+    "* Different ways of measuring error prioritize error differently\n",
+    "  * Mean squared error amplifies large error and minimizes small error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.30250000000000005\n"
+     ]
+    }
+   ],
+   "source": [
+    "knob_weight = 0.5\n",
+    "input = 0.5\n",
+    "goal_pred = 0.8\n",
+    "\n",
+    "pred = input * knob_weight\n",
+    "error = (pred - goal_pred) ** 2\n",
+    "\n",
+    "print(error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
