Added important behavioral question

--- a/ds/practice/interview/behavioral_interview_questions.ipynb
+++ b/ds/practice/interview/behavioral_interview_questions.ipynb
@@ -101,6 +101,7 @@
     "  * Greatest challenge (overcome)\n",
     "  * Persuaded someone who did not agree with you\n",
     "  * Dealt with and resolved a conflict (among team members)\n",
+    "  * Tell me about a time when you partnered with a non-technical stakeholder to solve a business problem.\n",
     "  * Led a team / showed leadership skills or aptitude\n",
     "  * How you've dealt with stress / stressful situations\n",
     "  * Most difficult problem encountered in previous job; how you solved it\n",
