Worked on syncing up portfolio article notebooks

--- a/ds/projects/print_fiction/2019-10-25-print_fiction.ipynb
+++ b/ds/projects/print_fiction/2019-10-25-print_fiction.ipynb
@@ -7,35 +7,16 @@
     "id": "6K-Ijmo7VceT"
    },
    "source": [
-    "# `print(fiction)`\n",
+    "# print(fiction)\n",
     "\n",
-    "> #### A data science project by _Tobias Reaper_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "_K7zk62hIT4-"
-   },
-   "source": [
-    "---\n",
-    "---\n",
+    "> Trained a machine learning classifier using a dataset scraped from GoodReads; built and deployed an interactive dashboard using Plotly Dash.\n",
     "\n",
-    "### Notebook Outline\n",
-    "\n",
-    "* Intro\n",
-    "* Imports and Configuration\n",
-    "* Load Data\n",
-    "* Model Validation\n",
-    "  * Majority class baseline\n",
-    "  * Limited logistic baseline\n",
-    "  * Default random forest\n",
-    "* Iterate\n",
-    "  * Feature engineering\n",
-    "  * Feature importances\n",
-    "  * Cross-validation and hyperparameter tuning\n",
-    "* Results and Interpretation"
+    "* toc: true\n",
+    "* badges: true\n",
+    "* author: Tobias Reaper\n",
+    "* comments: true\n",
+    "* categories: [machine learning, classification, web scraping, eda]\n",
+    "* image: images/booklineshelf.png"
    ]
   },
   {
@@ -68,7 +49,7 @@
     "id": "kM63g2O2IT5B"
    },
    "source": [
-    "> ### [print(fiction)](http://print-fiction.herokuapp.com/)"
+    "> [print(fiction)](http://print-fiction.herokuapp.com/)"
    ]
   },
   {
@@ -104,13 +85,6 @@
     "One last quick note before getting into it.\n",
     "\n",
     "I'm not going to walk through every single step (though I'll do my best to paint the whole picture) or show the actual code in this article. If you're curious about the nitty-gritty details and code I wrote for any of the steps, the Jupyter notebooks found at the link below walk through all of it."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The notebooks detailing the entire process of data gathering, wrangling, modeling, and deployment, can be found here: [print(fiction) notebooks](https://github.com/tobias-fyi/print-fiction/tree/master/notebooks)"
    ]
   },
   {
@@ -166,21 +140,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "gGwq5WRwI6ty"
-   },
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "!pip install category-encoders\n",
-    "!pip install eli5"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "colab": {
@@ -223,7 +182,6 @@
     "id": "yInEDKOEIT5c"
    },
    "source": [
-    "---\n",
     "---\n",
     "\n",
     "## The Data"
@@ -324,14 +282,11 @@
    "outputs": [],
    "source": [
     "def json_cat(json_files):\n",
-    "    \"\"\"\n",
-    "    Reads and concatenates a list of .jl (json lines) \n",
+    "    \"\"\"Reads and concatenates a list of .jl (json lines) \n",
     "    files into a single dataframe.\n",
     "    \"\"\"\n",
-    "\n",
     "    # Read the books json files into a list of dataframes\n",
     "    dfs = [pd.read_json(filepath, lines=True) for filepath in json_files]\n",
-    "\n",
     "    # Concatenate the list of dataframes\n",
     "    df = pd.concat(dfs, sort=False)\n",
     "    \n",
@@ -345,8 +300,9 @@
    "outputs": [],
    "source": [
     "def encode_book_genres(df):\n",
-    "    \"\"\"Deconcatenates top 30 book genres into separate features, OneHotEncoding style.\"\"\"\n",
-    "    \n",
+    "    \"\"\"Deconcatenates top 30 book genres into separate\n",
+    "    features, OneHotEncoding style.\n",
+    "    \"\"\"\n",
     "    # Set comprehension - creates a set of all genres listed in dataset\n",
     "    all_genres = {genre for row_genres in df[\"genres\"] for genre in row_genres}\n",
     "\n",
@@ -428,7 +384,7 @@
     "    df = df.drop(columns=[\"rating_histogram\"])\n",
     "    \n",
     "    df.to_csv(output_filename, index=False)\n",
-    "    print(f\"Successfully created dataframe and saved to current directory as '{output_filename}'\")\n",
+    "    print(f\"Created dataframe and saved to current directory as '{output_filename}'\")\n",
     "    \n",
     "    return df"
    ]
