--- a/ds/projects/self_labs/savor/notebooks/01_savor_data.ipynb
+++ b/ds/projects/self_labs/savor/notebooks/01_savor_data.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "That's the core idea: building a system to organize my life as if it were a series of manufacturing processes.\n",
     "\n",
-    "That way of saying it may initially make it seem impersonal. I believe it's the opposite, in fact. The goal is to use software to get to know myself better. That's where the tagline comes from — I'd like to take advantage of my own big data to make my life better in whatever ways I see fit at any given time.\n",
+    "That way of saying it may initially make it seem impersonal. I believe it's the opposite, in fact. The goal is to use software to understand myself better. That's where the tagline comes from — I'd like to take advantage of my own big data to make my life better in whatever ways I see fit at any given time.\n",
     "\n",
     "Companies like Google and Facebook have been taking advantage of my big data for years, with the primary goal of making money. In the process of segmenting and profiling me, they likely know a lot about me. I'd like to have a similar data-driven profile of my life, for my own purposes. Namely, to learn more about myself and my life, to be able to optimize it.\n",
     "\n",
@@ -128,17 +128,17 @@
    "outputs": [],
    "source": [
     "# === 2019-12-03 - 2019-08-17 === #\n",
-    "asset_path = \"../assets/data_/2020-08-17\"\n",
+    "asset_path = \"../assets/data_/2020-09-07\"\n",
     "\n",
     "# Individual files\n",
     "project_log = os.path.join(asset_path, \"project_log.csv\")\n",
     "engage_log = os.path.join(asset_path, \"engage_log.csv\")\n",
-    "task_log = os.path.join(asset_path, \"task_log.csv\")\n",
+    "moment_log = os.path.join(asset_path, \"moment_log.csv\")\n",
     "\n",
     "# Load into dataframes\n",
     "project_1 = pd.read_csv(project_log)\n",
     "engage_1 = pd.read_csv(engage_log)\n",
-    "task_1 = pd.read_csv(task_log)"
+    "moment_1 = pd.read_csv(moment_log)"
    ]
   },
   {
@@ -153,11 +153,11 @@
     "\n",
     "1. Project Log\n",
     "2. Engagement Log\n",
-    "3. Task Log\n",
+    "3. Moment Log\n",
     "\n",
-    "The naming was not completely arbitrary, though could definitely be improved — the names aren't necessarily completely accurate or self-explanatory. One big reason is that I also have a \"tasks\" table that has on-going TODO items. I haven't really been using that part of it, though, so when I refer to a \"task\", I'm talking about a `task_log` record.\n",
+    "The naming was not completely arbitrary, though could definitely be improved — the names aren't perfectly self-explanatory.\n",
     "\n",
-    "Basically, the reason I broke it up is from something I noticed about how my time is spent. At the top level, I try to work on a single \"project\" for a certain period of time. This helps me stay focused on what I wanted to do/work on during that time. Another way to think about it is that this level defines overarching parts of the day, usually somewhere between 5 and 10, depending on what I'm doing.\n",
+    "Basically, the reason I broke it up has to do with something I noticed about how my time is spent. At the top level, I try to work on a single \"project\" for a certain period of time. This helps me stay focused on what I wanted to do/work on during that time. Another way to think about it is that this level defines overarching parts of the day, usually somewhere between 5 and 10, depending on what I'm doing.\n",
     "\n",
     "Within each block of time (maybe that's a better name right there — \"block\") I can switch between specific activities, such as between coding, writing, and reading/research. That is the second level, with each individual activity assigned to that higher level block. This second level is where the vast majority of the action is; the level where I spend most of my time.\n",
     "\n",
@@ -174,11 +174,7 @@
     "\n",
     "The Project Log is the \"top level\" of my journal. These are blocks of time spent doing a set of related activities with (hopefully) singular goal in mind.\n",
     "\n",
-    "The specific activities, or \"engagements\" as I call them in this iteration, are linked to the parent \"project\" in a many-to-one manner. I.e. there are many engage records linked to a single project record.\n",
-    "\n",
-    "#### Notes\n",
-    "\n",
-    "* `duration` is hrs:mins"
+    "The specific activities, or \"engagements\" as I call them in this iteration, are linked to the parent \"project\" in a many-to-one manner. I.e. there are many engage records linked to a single project record."
    ]
   },
   {
